# PEA_projekt

./: CMakeLists.txt  README.md  sciezka.txt
src/: CMakeLists.txt  main.cpp
src/BranchAndBound/: BranchAndBound.cpp  BranchAndBound.hpp  CMakeLists.txt
src/BruteForce/: BruteForce.cpp  BruteForce.hpp  CMakeLists.txt
src/DynamicProgramming/: CMakeLists.txt  DynamicProgramming.cpp  DynamicProgramming.hpp
src/Genetic/: CMakeLists.txt  Genetic.cpp  Genetic.hpp
src/Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.hpp
src/SimAnn/: CMakeLists.txt  SimAnn.cpp  SimAnn.hpp
src/Start/: CMakeLists.txt  Start.cpp  Start.hpp
src/TabuSearch/: CMakeLists.txt  TabuSearch.cpp  TabuSearch.hpp
tests/: br17.txt  ftv170.txt  ftv33.txt  ftv55.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test_48v.txt  test_p.txt
